<?xml version="1.0"?>
<package format="2">
  <name>aist_ftsensor</name>
  <version>0.0.0</version>
  <description>The aist_ftsensor package</description>

  <maintainer email="miyoshi@todo.todo">miyoshi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>boost</depend>
  <depend>eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
