<?xml version="1.0"?>
<package format="2">
  <name>aist_ftsensor</name>
  <version>0.0.0</version>
  <description>The aist_ftsensor package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>boost</depend>
  <depend>eigen</depend>

  <build_export_depend>hardware_interface</build_export_depend>

  <export>
    <controller_interface plugin="${prefix}/aist_ftsensor_plugin.xml"/>
  </export>
</package>
