<?xml version="1.0"?>
<package format="2">
  <name>aist_routines</name>
  <version>0.0.0</version>
  <description>The aist_routines package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>

</package>
