<?xml version="1.0"?>
<package format="3">
  <name>aist_routines</name>
  <version>0.0.0</version>
  <description>The aist_routines package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>

  <license>BSD</license>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">
    python-setuptools
  </buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools
  </buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>

</package>
