<?xml version="1.0"?>
<package format="2">
  <name>aist_suction_controller</name>
  <version>1.0.0</version>
  <description>The aist_suction_controller package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio Ueshiba</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>

</package>
